--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,6 +55,7 @@ p{
 	font-family: 'Share Tech Mono', monospace;
 	font-weight: bold;
 	font-size: 24px;
+	color: white;
 	max-width: 350px;
 	text-align: center;
 	border-radius: 12px;	
