--- a/stylesheets/style2.css
+++ b/stylesheets/style2.css
@@ -18,6 +18,19 @@ h3{
 	border-radius: 12px;
   max-width: 600px
 }
+h4{
+  font-family: 'Share Tech Mono', monospace;
+  font-weight: bold;
+  font-size: 20px;
+  color: black;
+  background-color: rgba(0, 0, 0, 0);
+  max-width: 570px;
+  margin-top: 650px;
+  margin-left: 40px;
+  text-align: left;
+  border-radius: 12px;
+  max-width: 600px
+}
 div{
   height: 100%;
   background-size: cover;
@@ -121,7 +134,7 @@ img{
   max-width: 1200px;
   position: relative;
   margin-left: 20%;
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 200px;
   max-width: 1200px;
   max-height: 600px;
@@ -133,11 +146,44 @@ img{
 	margin-left: 20%;
 	padding-bottom: 0;
 }
+.kagari{
+  padding-top: 65px;
+  max-width: 1200px;
+  position: relative;
+  height: 600px;
+  margin-left: 12px;
+  margin-right: 20%;
+  margin-top: -60px;
+  margin-bottom: 20px;
+  max-width: 100%;
+}
+.kagaritext{
+  max-width: 1203px;
+  position: relative;
+  margin-top: -40px;
+  margin-left: 12px;
+}
+.masaoka{
+  max-width: 1200px;
+  position: relative;
+  margin-left: 20%;
+  margin-top: 5px;
+  margin-bottom: 200px;
+  max-width: 1200px;
+  max-height: 600px;
+}
+.masaokatext{
+  max-width: 1200px;
+  position: relative;
+  margin-top: -800px;
+  margin-left: 20%;
+  padding-bottom: 570px;
+  }
 .makishima{
   max-width: 1200px;
   position: relative;
   margin-left: 20%;
-  margin-top: 15px;
+  margin-top: 10px;
   margin-bottom: 200px;
   max-width: 1200px;
   max-height: 600px;
@@ -152,18 +198,13 @@ img{
 .role{
   float: right;
 }
-.button{
-	font-size: 14px;
-	margin-top: 50px;
-	padding: 20px;
-}
 footer{
 	max-height: 100px;
 	min-width: 100%;
 	position: relative;
 	background-color: rgba(32,78,72, 1);
 	color: white;
-	margin-top: 700px;
+	margin-top: 50px;
 	margin-bottom: 0px;
 	line-height: 20px;
 	padding-bottom: 10px
