added dominators tag to style.css
added dominators tag to style.css and made style match characters tag

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -60,6 +60,16 @@ p{
 	text-align: center;
 	border-radius: 12px;	
 }
+.dominators{
+	position: relative;
+	margin-left: 30%;
+	font-family: 'Share Tech Mono', monospace;
+	font-weight: bold;
+	font-size: 24px;
+	color: white;
+	max-width: 350px;
+	text-align: center;
+	border-radius: 12px;	
 }
 .button{
 	font-size: 14px;
